--- a/_posts/2019-12-21-the-us-narrative-today.html
+++ b/_posts/2019-12-21-the-us-narrative-today.html
@@ -1628,107 +1628,107 @@ stories:
   domain: http://www.daily-review.com/
   link: https://www.daily-review.com/business/plan-save-turtles-shrimp-nets-scaled-way-back
 images:
-- name: statue-of-liberty-front-view-statueofliberty-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-colored-circuits.jpg
-- name: cargo-ship-cargo-ship-on-sea-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-free-woman.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-purp-paper.jpg
-- name: school-clouds-church-clouds-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-plentiful.jpg
-- name: server-cloud-server-racks-clouds-jap-wav-pr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-jap-wav-pr.jpg
-- name: nazi-invasion-creepy-doll-looking-down.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-creepy-doll-looking-down.jpg
-- name: rain-princess-boats-waterfront-bristol.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-boats-waterfront-bristol.jpg
-- name: long-factory-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/long-factory-copper-circuit.jpg
-- name: school-clouds-church-clouds-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-graham-sutherland.jpg
-- name: bf-skinner-train-station-cloud.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-station-cloud.jpg
-- name: stalin-time-city-building-trees-sky.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-city-building-trees-sky.jpg
-- name: la-muse-cannon_36556797762_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-cannon_36556797762_o.jpg
-- name: bf-skinner-hallway-mirrors-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hallway-mirrors-hotel.jpg
-- name: copper-circuit-people-walking-down-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-people-walking-down-street.jpg
-- name: downtown-los-angeles-downtown-la-dark-rain.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dark-rain.JPG
-- name: death-valley-death-valley-national-park.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-crabapple.jpg
-- name: crow_deep_connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_deep_connections.jpg
-- name: statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-brush.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-creativity.jpg
-- name: abe-lincoln-one-pablo-blue-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-pablo-blue-file-00-00-07-91.jpg
-- name: christianity-christianity-under-construction-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-rainbow-festival.jpg
-- name: crow-crow-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-atari-missle.jpg
-- name: gypsy-wagon-gypsywagon-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-cinnamon-rolls.jpg
-- name: nyc-flag-nycflag-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dark-soul.jpg
-- name: stories-machine-road-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-machine-road-light-dali.jpg
-- name: old-door-lock-old-door-lock-2-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-copper-circuit.jpg
-- name: christianity-christianity-under-construction-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-crunch-paper.jpg
-- name: adam-smith-adam-smith-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-china-prop.jpg
-- name: bf-skinner-lincoln-memorial_36690528196_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-lincoln-memorial_36690528196_o.jpg
-- name: oldcabin-store-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-clean-view.jpg
-- name: old-school-house-old-schoolhouse-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-hot-spicy.jpg
-- name: window-window-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-colored-circuits.jpg
-- name: liberty-back-statue-liberty-back-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-blue-granite.jpg
-- name: art-museum-art-museum-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-umberto-bocc.jpg
-- name: la-muse-destruction-seattle-viaduct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-destruction-seattle-viaduct.jpg
-- name: mosaic-face-mosaic-face-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-sand-paper.jpg
-- name: oldhouse-oldhouse-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-oily-mcoilface.jpg
-- name: beach-rocks-beach-rocks-currents-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-rainbow-festival.jpg
-- name: downtown-trucksilo-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-nazi-poster.jpg
-- name: stories-G0520270-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-G0520270-blue-circuit.jpg
-- name: miamibeach-miamibeach-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-purp-paper.jpg
-- name: nazi-invasion-grain-ship-docking-grass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-grain-ship-docking-grass.jpg
-- name: stories-status-berlin-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-status-berlin-matrix.jpg
-- name: miamibeach-miamibeach-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-blue-circuit.jpg
-- name: abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-yellow-collage-file-00-00-07-91.jpg
-- name: old-gas-pumps-oldgaspumps-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-sand-paper.jpg
-- name: mosaic-face-mosaic-face-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-umberto-bocc.jpg
-- name: oldhouse-oldhouse-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-kand-two.jpg
-- name: curtain-curtain-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-creativity.jpg
+- name: oldhousecars-house-old-cars-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crabapple.jpg
+- name: la-muse-crypto-wheels-old-compute-bletchley.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-crypto-wheels-old-compute-bletchley.jpg
+- name: old-door-lock-old-door-lock-2-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dark-dali.jpg
+- name: stalin-time-frosty-downtown-lights.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-frosty-downtown-lights.jpg
+- name: bf-skinner-memorial-to-the-jews-in-berlin-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-memorial-to-the-jews-in-berlin-2.jpg
+- name: 35201856153_61bc075e4b-scream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-scream.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-purp-paper.jpg
+- name: castle-wall-DSC-0067-blue-circuit-5.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-blue-circuit-5.JPG
+- name: aws-s3-stories-dark-clouds-la-buildings.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-dark-clouds-la-buildings.jpg
+- name: san-francisco-street-view-san-francisco-street-view-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-mucha-mult.jpg
+- name: aws-s3-mountainlake-mountainlake-still-600.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-mountainlake-mountainlake-still-600.jpg
+- name: mediterranean-mediterranean-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-hot-spicy.jpg
+- name: adam-smith-adam-smith-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kandinsky-bv.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-kandinsky-bv.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-kandinsky-bv.JPG
+- name: berlinwall2-berlinwall-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-pablo-blue.jpg
+- name: supreme-court-supremecourt-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-atari-missle.jpg
+- name: bf-skinner-hollywood-sign-hills.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-hollywood-sign-hills.jpg
+- name: birdhouse-birdhouse-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-space-pizza.jpg
+- name: server-cloud-server-racks-clouds-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-smoking-cigarette.jpg
+- name: scream-concert-hall.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-concert-hall.jpg
+- name: nazi-invasion-water-fountain-many-shooting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-water-fountain-many-shooting.jpg
+- name: walled-garden-walled-garden-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-emily-carr.jpg
+- name: downtown-la-diego-rivera1.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-diego-rivera1.JPG
+- name: oldhousecars-house-old-cars-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-hot-spicy.jpg
+- name: oldhousecars-house-old-cars-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-pablo-blue.jpg
+- name: death-valley-death-valley-national-park-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-circuit.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-marcel-duchamp.jpg
+- name: blossombar-really-hot-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-really-hot-file-00-00-50-62.jpg
+- name: bf-skinner-please-do-not-feed-the-pigeon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-please-do-not-feed-the-pigeon.jpg
+- name: oldhotel-oldhotel-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-colorful-blocks.jpg
+- name: razorcliff-razorcliff-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-light-dali.jpg
+- name: subway-subway-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-atari-missle.jpg
+- name: art-museum-art-museum-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-emily-carr.jpg
+- name: gypsymosaic-gypsy-eyes-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-far-away.jpg
+- name: aws-s3-kerbypeak-kerbypeak-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still.jpg
+- name: ellis-island-ellis-island-room-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-rain.jpg
+- name: old-door-lock-old-door-lock-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-green-zuma.jpg
+- name: nyc-flag-nycflag-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-electricity.jpg
+- name: walled-garden-walled-garden-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-dark-dali.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-yellow-collage.jpg
+- name: nazi-invasion-close-to-all-remote-aircraft.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-close-to-all-remote-aircraft.jpg
+- name: old-door-lock-old-door-lock-2-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-ww2-dresden.jpg
+- name: oldhotel-oldhotel-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-dark-rain.jpg
+- name: old-school-house-old-schoolhouse-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-mucha-mult.jpg
+- name: berlinwall2-berlinwall-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-clean-view.jpg
+- name: nazi-invasion-DSC_0033.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0033.jpg
+- name: bf-skinner-destruction-seattle-viaduct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-destruction-seattle-viaduct.jpg
+- name: oldhotel-oldhotel-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-satan-red.jpg
+- name: ellis-island-ellisisland-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-diego-rivera1.jpg
+- name: birdhouse-birdhouse-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-emily-carr.jpg
+- name: stalin-time-google-front-of-business.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-google-front-of-business.jpg
 ---
 Reed Road Construction Work Expected To Be Done By February.&nbsp;How Pittsburgh Is Attempting To Lower And Help Its Homeless Population.&nbsp;Personal Loan Providers Are Hard To Find That Are Reputable.&nbsp;This Is Where Mall Santas Are Made.&nbsp;Jason Derulo's 'attractive' Cats Character.&nbsp;Seaside Boutique Cape Cod.&nbsp;Every Restaurant And Bar Opening And Closing This Week.&nbsp;Second Amendment Sanctuary Push Aims To Defy New Gun Laws.&nbsp;
